--- a/arch/arm/configs/lineageos_n7100_defconfig
+++ b/arch/arm/configs/lineageos_n7100_defconfig
@@ -784,7 +784,7 @@ CONFIG_ARM_FLUSH_CONSOLE_ON_RESTART=y
 # CONFIG_USE_OF is not set
 CONFIG_ZBOOT_ROM_TEXT=0
 CONFIG_ZBOOT_ROM_BSS=0
-CONFIG_CMDLINE="console=ttySAC2,115200 consoleblank=0 androidboot.hardware=smdk4x12 androidboot.selinux=permissive"
+CONFIG_CMDLINE="console=ttySAC2,115200 consoleblank=0 androidboot.hardware=smdk4x12"
 # CONFIG_CMDLINE_FROM_BOOTLOADER is not set
 CONFIG_CMDLINE_EXTEND=y
 # CONFIG_CMDLINE_FORCE is not set
@@ -812,10 +812,10 @@ CONFIG_CPU_FREQ_STAT=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_ADAPTIVE is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_PEGASUSQ is not set
+CONFIG_CPU_FREQ_DEFAULT_GOV_PEGASUSQ=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_DYNAMIC is not
 # CONFIG_CPU_FREQ_DEFAULT_GOV_LIONHEART is not set
-CONFIG_CPU_FREQ_DEFAULT_GOV_ZZMOOVE=y
+# CONFIG_CPU_FREQ_DEFAULT_GOV_ZZMOOVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_ZENX is not set
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
@@ -2462,7 +2462,7 @@ CONFIG_VIDEO_SAMSUNG_MEMSIZE_FIMD=8192
 CONFIG_FB_S5P_MDNIE=y
 # CONFIG_FB_MDNIE_PWM is not set
 # CONFIG_FB_EBOOK_PANEL_SCENARIO is not set
-CONFIG_FB_MDNIE_RGB_ADJUST=y
+# CONFIG_FB_MDNIE_RGB_ADJUST is not set
 CONFIG_FB_S5P_MIPI_DSIM=y
 CONFIG_FB_BGRA_ORDER=y
 # CONFIG_FB_RGBA_ORDER is not set
