--- a/arch/arm/configs/lineageos_t0lte_defconfig
+++ b/arch/arm/configs/lineageos_t0lte_defconfig
@@ -88,7 +88,7 @@ CONFIG_LOG_BUF_SHIFT=17
 # CONFIG_CPU_UNDERVOLTING is not set
 # CONFIG_GPU_UNDERVOLTING is not set
 CONFIG_DEFAULT_CLOCK_LOW=200
-CONFIG_DEFAULT_CLOCK_HIGH=1200
+CONFIG_DEFAULT_CLOCK_HIGH=1600
 CONFIG_CGROUPS=y
 CONFIG_CGROUP_DEBUG=y
 CONFIG_CGROUP_FREEZER=y
@@ -813,10 +813,10 @@ CONFIG_CPU_FREQ_STAT=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_ADAPTIVE is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_PEGASUSQ is not set
+CONFIG_CPU_FREQ_DEFAULT_GOV_PEGASUSQ=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_DYNAMIC is not
 # CONFIG_CPU_FREQ_DEFAULT_GOV_LIONHEART is not set
-CONFIG_CPU_FREQ_DEFAULT_GOV_ZZMOOVE=y
+# CONFIG_CPU_FREQ_DEFAULT_GOV_ZZMOOVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_ZENX is not set
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
@@ -1868,7 +1868,7 @@ CONFIG_SERIAL_CORE_CONSOLE=y
 #
 # HSIC support for DIAG
 #
-CONFIG_DIAG_HSIC_PIPE=y
+# CONFIG_DIAG_HSIC_PIPE=y
 # CONFIG_TTY_PRINTK is not set
 # CONFIG_HVC_DCC is not set
 # CONFIG_IPMI_HANDLER is not set
@@ -3074,9 +3074,9 @@ CONFIG_ZCACHE=y
 #
 CONFIG_ANDROID=y
 CONFIG_ANDROID_BINDER_IPC=y
-CONFIG_ANDROID_BINDER_IPC_32BIT=y
+# CONFIG_ANDROID_BINDER_IPC_32BIT is not set
 CONFIG_ANDROID_BINDER_DEVICES="binder,hwbinder,vndbinder"
-CONFIG_ANDROID_LOGGER=y
+# CONFIG_ANDROID_LOGGER is not set
 CONFIG_ANDROID_RAM_CONSOLE=y
 CONFIG_ANDROID_RAM_CONSOLE_ENABLE_VERBOSE=y
 CONFIG_ANDROID_RAM_CONSOLE_ERROR_CORRECTION=y
